Implement: connect arg password to ServerData

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -61,6 +61,10 @@
 		"mutex": "cpp",
 		"ratio": "cpp",
 		"sstream": "cpp",
-		"variant": "cpp"
+		"variant": "cpp",
+		"__hash_table": "cpp",
+		"__node_handle": "cpp",
+		"__tree": "cpp",
+		"map": "cpp"
 	}
 }
