Update: settings.json in .vscode

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -65,6 +65,14 @@
 		"__hash_table": "cpp",
 		"__node_handle": "cpp",
 		"__tree": "cpp",
-		"map": "cpp"
+		"map": "cpp",
+		"any": "cpp",
+		"condition_variable": "cpp",
+		"set": "cpp",
+		"iomanip": "cpp",
+		"semaphore": "cpp",
+		"stop_token": "cpp",
+		"thread": "cpp",
+		"cinttypes": "cpp"
 	}
 }
