--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -74,6 +74,8 @@
 		"stop_token": "cpp",
 		"thread": "cpp",
 		"cinttypes": "cpp",
-		"queue": "cpp"
+		"queue": "cpp",
+		"print": "cpp",
+		"stack": "cpp"
 	}
 }
